--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,8 @@ header > div > h1::first-letter {
 }
 
 footer {
-  margin-top: 15vw;
+  position: relative;
+  transform: translateY(calc(-100% + 150px));
   width: 100vw;
   height: 150px;
   background-color: rgba(241, 243, 246, 0.7);
@@ -55,13 +56,11 @@ footer {
 
 footer p:first-child {
   margin-bottom: 1vw;
-  text-decoration: underline;
   position: relative;
 }
 
 footer p:last-child {
   position: relative;
-  text-decoration: underline;
 }
 
 footer p:first-child::before,
@@ -119,8 +118,10 @@ a {
 }
 
 .container {
-  width: 70vw;
-  height: 100%;
+  width: 100vw;
+  height: auto;
+  min-height: 100vh;
+  /* padding-bottom: calc(150px); */
 }
 
 article {
@@ -276,6 +277,40 @@ article {
   padding-left: 10vh;
 }
 
+.turkeyContainer {
+  padding: 150px 15vw;
+  width: 100vw;
+  height: max-content;
+  display: grid;
+  grid-template: "a a a" 15vw "b c c" 15vw "b c c" 15vw / 1fr 1fr 1fr;
+  row-gap: 3vw;
+  column-gap: 3vw;
+  grid-auto-rows: 15vw;
+}
+
+.gridA,
+.gridB,
+.gridC,
+.grid {
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
+}
+
+.gridA {
+  grid-area: a;
+  background-color: #834646;
+}
+
+.gridB {
+  grid-area: b;
+}
+
+.gridC {
+  grid-area: c;
+  background-color: black;
+}
+
 /* ~1023px 모바일~태블릿 */
 
 @media (width<1024px) {
@@ -357,6 +392,14 @@ article {
     border: 1px solid black;
     background-color: rgba(241, 243, 246, 0.4);
   }
+
+  .turkeyContainer {
+    padding-top: 120px;
+    grid-template: "c a" 15vw "c b" 15vw "c b" 15vw / 1fr 1fr;
+    row-gap: 3vw;
+    column-gap: 3vw;
+    grid-auto-rows: 30vw;
+  }
 }
 
 /* ~768px 모바일 */
@@ -372,6 +415,16 @@ article {
 
   .mainPage > div :nth-child(2) {
     display: block;
+  }
+
+  .turkeyContainer {
+    padding-top: 100px;
+    grid-template: "c" 35vh "b" 35vh "a" 35vh;
+    row-gap: 3vw;
+    column-gap: 3vw;
+    grid-auto-rows: 35vh;
+
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
