--- a/styles.css
+++ b/styles.css
@@ -186,13 +186,13 @@ article {
 .subPic1 {
   right: 0;
   width: 55%;
-  background-image: url("./images/ankara/ankara8.jpeg");
+  background-image: url("./images/ankara/ankara2.jpg");
   background-position: 0% 100%;
 }
 
 .subPic2 {
   width: 45%;
-  background-image: url("./images/antalya/antalya0.jpeg");
+  background-image: url("./images/antalya/antalya0.jpg");
   background-position: 60% 90%;
   left: 0;
 }
@@ -200,7 +200,7 @@ article {
 .subPic3 {
   right: 0;
   width: 55%;
-  background-image: url("./images/cappadocia/cappadocia5.jpeg");
+  background-image: url("./images/cappadocia/cappadocia2.jpg");
   background-position: 20% 100%;
 }
 
@@ -208,7 +208,7 @@ article {
   left: 0;
   width: 45%;
   filter: saturate(150%);
-  background-image: url("./images/pamukkale/pamukkale10.jpeg");
+  background-image: url("./images/pamukkale/pamukkale2.jpg");
   background-position: 0% 100%;
 }
 
@@ -292,14 +292,17 @@ article {
 .gridB,
 .gridC,
 .grid {
-  background-color: aqua;
+  background-color: rgb(233, 233, 233);
   width: 100%;
   height: 100%;
+  background-position: 50% 80%;
+  background-size: cover;
 }
 
 .gridA {
   grid-area: a;
-  background-color: #834646;
+  background-position: 50% 10%;
+  filter: saturate(60%);
 }
 
 .gridB {
@@ -308,7 +311,6 @@ article {
 
 .gridC {
   grid-area: c;
-  background-color: black;
 }
 
 /* ~1023px 모바일~태블릿 */
