--- a/styles.css
+++ b/styles.css
@@ -395,7 +395,7 @@ article {
   }
 
   .turkeyContainer {
-    padding-top: 120px;
+    padding: 120px 50px;
     grid-template: "c a" 15vw "c b" 15vw "c b" 15vw / 1fr 1fr;
     row-gap: 3vw;
     column-gap: 3vw;
@@ -423,7 +423,7 @@ article {
   }
 
   .turkeyContainer {
-    padding-top: 100px;
+    padding: 100px 30px;
     grid-template: "c" 35vh "b" 35vh "a" 35vh;
     row-gap: 3vw;
     column-gap: 3vw;
@@ -440,6 +440,10 @@ article {
   .introduce3,
   .introduce4 {
     padding: 10vw 15vw;
+  }
+
+  .gridA {
+    filter: saturate(100%);
   }
 }
 
